[tool.poetry]
name = "deep-reinforcement-learning-algorithms"
version = "0.1.0"
authors = ["felix <felhof1@hotmail.com>"]
description = "various Deep Reinforcement Learning algorithms"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Felhof/Deep-Reinforcement-Learning-Algorithms"
repository = "https://github.com/Felhof/Deep-Reinforcement-Learning-Algorithms"

[tool.poetry.dependencies]
python = "^3.9"
torch = [
  {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp39-cp39-linux_x86_64.whl", python = "~3.9", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-linux_x86_64.whl", python = "~3.10", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp39-cp39-win_amd64.whl", python = "~3.9", markers = "sys_platform == 'win32'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp310-cp310-win_amd64.whl", python = "~3.10", markers = "sys_platform == 'win32'"},
]
numpy = "^1.22.2"
pygame = "^2.1.2"
matplotlib = "^3.5.1"
prettytable = "^3.4.1"
nox = "^2022.11.21"
gymnasium = {extras = ["accept-rom-license"], version = "^0.27.0"}
ale-py = "^0.8.0"
opencv-python = "^4.7.0.68"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-import-order = "^0.18.1"
mypy = "^0.991"
flake8-annotations = "^2.7.0"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pympler = "^1.0.1"
array2gif = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
